envoy/envoy.yaml
static_resources:
  clusters:
    - name: nginx_proxy
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      dns_refresh_rate: 1s
      load_assignment:
        cluster_name: "nginx_cluster"
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "nginx"
                      port_value: "8080"

  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8090
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: envoy_proxy
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: "nginx_proxy"
                http_filters:
                  - name: envoy.filters.http.router

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
